syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.crumbs.systemevents.grpc";

service LogService {
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc log(ActionRequest) returns (ActionResponse);
}

message ActionRequest {
  string serviceName = 1;
  string timestamp = 2;
  string resourceName = 3;
  string actionType = 4;
  string responseType = 5;
}

message ActionResponse {
  string responseMessage = 1;
}

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}
